# projectying-termux

./: .gitignore  AIgames迁移计划.md  AI笔记.txt  Cargo.toml  INDEX.md  README.md  run.sh  笔记.txt  项目蓝图.md  项目记忆.md
Aidebug/: README.md  advisor_governance_test_20260516.md  aidebug.rs  coding_codex_parity_plan_20260523.md  coding_ling_special_test_20260517.md  context_governance_tools_plan.md  context_system_three_mode_plan.md  context_token_governance_plan_20260520.md  departmentrs.rs  events.jsonl  health.json  health_monitor_plan.md  live_test_plan_20260516.md  matrix_coordination_upgrade_plan_20260526.md  matrix_full_chain_pressure_20260517.md  performance.json  plan_tool_live_test_20260517.md  projectying_context_vision_regression_20260517.md  projectying_iteration_repair_plan_20260517.md  projectying_self_check_plan_20260517.md  projectying_sharedboard_aidebug_plan_20260517.md  projectying_stream_reliability_plan_20260523.md  round_test_log_20260516.md  settings_memory_tooloutput_plan.md  shared_fastmemory_board_upgrade_20260517.md  status.json  status_context_token_protocol_plan_20260521.md  systemic_stability_optimization_review_20260521.md  tool_manage_unified_settings_plan.md  tool_projection_snapshot.json  worker_state.pre_live_compact_test.json
Aidebug/artifacts/: plan_tool_snake_probe.md  (+2 more)
config/: advisor.json  coding.json
media/: README.txt  screenshot
projectyinghtml/: index.html  style.css
scripts/: sync-mumu-termux.ps1
src/: advisor.rs  coding.rs  companion.rs  departmentrs.rs  main.rs  mcp.rs  persona.rs  roles.rs  server.rs  ui.rs
(+129 files in other folders)
