[package]
name = "projectying"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "projectying"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
imagesize = "0.13"
libc = "0.2"
portable-pty = "0.9"
pulldown-cmark = "0.13"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "multipart", "rustls-tls"] }
regex = "1"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
unicode-width = "0.1"
vt100 = "0.15"
